[DOC] Add showcase link

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "theme",
     "web"
   ],
-  "homepage": "https://cnerta-web.fr",
+  "homepage": "https://bulma-package.cnerta-web.fr/",
   "authors": [
     {
       "name": "Sébastien Convers",
