[TASK] Rector refactoring

--- a/composer.json
+++ b/composer.json
@@ -22,15 +22,15 @@
   "license": "GPL-2.0-or-later",
   "require": {
     "php": ">=7.2.0",
-    "typo3/cms-backend": "^9.5 || ^10.4",
-    "typo3/cms-core": "^9.5 || ^10.4",
-    "typo3/cms-extbase": "^9.5 || ^10.4",
-    "typo3/cms-extensionmanager": "^9.5 || ^10.4",
-    "typo3/cms-fluid": "^9.5 || ^10.4",
-    "typo3/cms-frontend": "^9.5 || ^10.4",
-    "typo3/cms-install": "^9.5 || ^10.4",
-    "typo3/cms-rte-ckeditor": "^9.5 || ^10.4",
-    "typo3/cms-seo": "^9.5 || ^10.4",
+    "typo3/cms-backend": "^10.4",
+    "typo3/cms-core": "^10.4",
+    "typo3/cms-extbase": "^10.4",
+    "typo3/cms-extensionmanager": "^10.4",
+    "typo3/cms-fluid": "^10.4",
+    "typo3/cms-frontend": "^10.4",
+    "typo3/cms-install": "^10.4",
+    "typo3/cms-rte-ckeditor": "^10.4",
+    "typo3/cms-seo": "^10.4",
     "scssphp/scssphp": "^1.0.8",
     "ext-dom": "*",
     "ext-libxml": "*",
