[BUGFIX] Exclude node_module folder of composer archive

--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,8 @@
   "archive": {
     "exclude": [
       ".gitignore",
-      ".crowdin.yaml"
+      ".crowdin.yaml",
+      "node_modules"
     ]
   }
 }
