[FEATURE] Add CSS-Class for RTE mail links

--- a/Configuration/RTE/Default.yaml
+++ b/Configuration/RTE/Default.yaml
@@ -81,3 +81,14 @@ editor:
         removeButtons:
             - Anchor
             - JustifyBlock
+
+classesAnchor:
+    mail:
+        class: 'icon-mail'
+        type: 'mail'
+
+buttons:
+    link:
+        properties:
+            class:
+                allowedClasses: 'icon-mail'
