--- a/Configuration/RTE/Default.yaml
+++ b/Configuration/RTE/Default.yaml
@@ -1,95 +1,122 @@
 imports:
-    - { resource: "EXT:rte_ckeditor/Configuration/RTE/Processing.yaml" }
-    - { resource: "EXT:rte_ckeditor/Configuration/RTE/Editor/Base.yaml" }
-    - { resource: "EXT:rte_ckeditor/Configuration/RTE/Editor/Plugins.yaml" }
+    - { resource: 'EXT:rte_ckeditor/Configuration/RTE/Processing.yaml' }
+    - { resource: 'EXT:rte_ckeditor/Configuration/RTE/Editor/Base.yaml' }
+    - { resource: 'EXT:rte_ckeditor/Configuration/RTE/Editor/Plugins.yaml' }
 
 editor:
     config:
-        bodyClass: "content section"
         contentsCss:
-            - "EXT:bulma_package/Resources/Public/Build/rte.min.css"
+            - 'EXT:bulma_package/Resources/Public/Build/rte.min.css'
 
-        coreStyles_strike: { element: 'span', attributes: {'class': 'text-striked'}, overrides: 'strike' }
-        coreStyles_bold: { element: 'span', attributes: {'class': 'has-text-weight-bold'}, overrides: 'b' }
-        coreStyles_underline: { element: 'span', attributes: {'class': 'text-underline'}, overrides: 'u' }
-        coreStyles_italic: { element: 'span', attributes: {'class': 'is-italic'}, overrides: 'i' }
+        heading:
+            options:
+                - { model: 'paragraph', title: 'Paragraph' }
+                - { model: 'heading2', view: 'h2', title: 'Heading 2' }
+                - { model: 'heading3', view: 'h3', title: 'Heading 3' }
+                - { model: 'heading4', view: 'h4', title: 'Heading 4' }
+                - { model: 'heading5', view: 'h5', title: 'Heading 5' }
 
-        stylesSet:
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.box", element: "p", attributes: { 'class': 'box' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.table.bordered", element: "table", attributes: { 'class': 'table is-bordered' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.notification", element: "p", attributes: { 'class': 'notification' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.notification.primary", element: "p", attributes: { 'class': 'is-primary notification' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.notification.success", element: "p", attributes: { 'class': 'is-success notification' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.notification.info", element: "p", attributes: { 'class': 'is-info notification' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.notification.warning", element: "p", attributes: { 'class': 'is-warning notification' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.notification.danger", element: "p", attributes: { 'class': 'is-danger notification' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.notification.light", element: "p", attributes: { 'class': 'is-light notification' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.1", element: "p", attributes: { 'class': 'is-size-1' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.2", element: "p", attributes: { 'class': 'is-size-2' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.3", element: "p", attributes: { 'class': 'is-size-3' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.4", element: "p", attributes: { 'class': 'is-size-4' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.5", element: "p", attributes: { 'class': 'is-size-5' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.6", element: "p", attributes: { 'class': 'is-size-6' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.button", element: "a", attributes: { 'class': 'button' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.button.primary", element: "a", attributes: { 'class': 'button is-primary' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.button.success", element: "a", attributes: { 'class': 'button is-success' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.button.info", element: "a", attributes: { 'class': 'button is-info' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.button.warning", element: "a", attributes: { 'class': 'button is-warning' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.button.danger", element: "a", attributes: { 'class': 'button is-danger' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.button.light", element: "a", attributes: { 'class': 'button is-light' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.button.dark", element: "a", attributes: { 'class': 'button is-dark' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.primary", element: "span", attributes: { 'class': 'has-text-primary' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.success", element: "span", attributes: { 'class': 'has-text-success' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.info", element: "span", attributes: { 'class': 'has-text-info' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.warning", element: "span", attributes: { 'class': 'has-text-warning' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.danger", element: "span", attributes: { 'class': 'has-text-danger' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.light", element: "span", attributes: { 'class': 'has-text-light' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.dark", element: "span", attributes: { 'class': 'has-text-dark' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.1", element: "span", attributes: { 'class': 'is-size-1' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.2", element: "span", attributes: { 'class': 'is-size-2' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.3", element: "span", attributes: { 'class': 'is-size-3' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.4", element: "span", attributes: { 'class': 'is-size-4' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.5", element: "span", attributes: { 'class': 'is-size-5' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.6", element: "span", attributes: { 'class': 'is-size-6' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.highlighted", element: "span", attributes: { 'class': 'has-background-primary-light' } }
-            - { name: "LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.buttons", element: "p", attributes: { 'class': 'buttons' } }
+        style:
+            definitions:
+                ## Block level styles
+                # Box
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.box', element: 'p', classes: ['box'] }
+                # Notifications
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.notification', element: 'p', classes: ['notification'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.notification.primary', element: 'p', classes: ['notification', 'is-primary'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.notification.success', element: 'p', classes: ['notification', 'is-success'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.notification.info', element: 'p', classes: ['notification', 'is-info'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.notification.warning', element: 'p', classes: ['notification', 'is-warning'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.notification.danger', element: 'p', classes: ['notification', 'is-danger'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.notification.light', element: 'p', classes: ['notification', 'is-light'] }
+                # Sizes
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.1', element: 'p', classes: ['is-size-1'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.2', element: 'p', classes: ['is-size-2'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.3', element: 'p', classes: ['is-size-3'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.4', element: 'p', classes: ['is-size-4'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.5', element: 'p', classes: ['is-size-5'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.6', element: 'p', classes: ['is-size-6'] }
+                # Button container
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.buttons', element: 'p', classes: ['buttons'] }
+                # Table
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.table.bordered', element: 'table', classes: ['table', 'is-bordered'] }
 
-        toolbarGroups:
-            - { name: styles, groups: [ format, styles ] }
-            - { name: basicstyles, groups: [ basicstyles ] }
-            - { name: paragraph, groups: [ list, indent, blocks, align ] }
-            - "/"
-            - { name: links, groups: [ links ] }
-            - { name: clipboard, groups: [ clipboard, cleanup, undo ] }
-            - { name: insert, groups: [ insert ] }
-            - { name: tools, groups: [ table, specialchar ] }
-            - { name: document, groups: [ mode ] }
+                ## Inline styles
+                # Buttons
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.button', element: 'a', classes: ['button'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.button.primary', element: 'a', classes: ['button', 'is-primary'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.button.success', element: 'a', classes: ['button', 'is-success'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.button.info', element: 'a', classes: ['button', 'is-info'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.button.warning', element: 'a', classes: ['button', 'is-warning'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.button.danger', element: 'a', classes: ['button', 'is-danger'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.button.light', element: 'a', classes: ['button', 'is-light'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.button.dark', element: 'a', classes: ['button', 'is-dark'] }
+#                # Link classes
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.link.mail', element: 'a', classes: ['icon-mail'] }
+                # Text colors
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.primary', element: 'span', classes: ['has-text-primary'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.success', element: 'span', classes: ['has-text-success'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.info', element: 'span', classes: ['has-text-info'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.warning', element: 'span', classes: ['has-text-warning'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.danger', element: 'span', classes: ['has-text-danger'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.light', element: 'span', classes: ['has-text-light'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.dark', element: 'span', classes: ['has-text-dark'] }
+                # Sizes
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.1', element: 'span', classes: ['is-size-1'] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.2', element: 'span', classes: [ 'is-size-2' ] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.3', element: 'span', classes: [ 'is-size-3' ] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.4', element: 'span', classes: [ 'is-size-4' ] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.5', element: 'span', classes: [ 'is-size-5' ] }
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.size.6', element: 'span', classes: [ 'is-size-6' ] }
+                # Highlightment
+                - { name: 'LLL:EXT:bulma_package/Resources/Private/Language/Rte.xlf:style.highlighted', element: 'span', classes: [ 'has-background-primary-light' ] }
 
-        format_tags: "p;h1;h2;h3;h4;h5"
+        toolbar:
+            items:
+                - style
+                - heading
+                - - '|'
+                - clipboard
+                - removeFormat
+                - undo
+                - redo
+                # grouping separator
+                - '|'
+                - insertTable
+                - tableColumn
+                - tableRow
+                - mergeTableCells
+                - '|'
+                - link
+                # line break
+                - '-'
+                - bold
+                - italic
+                - underline
+                - strikethrough
+                - '|'
+                - subscript
+                - superscript
+                - softhyphen
+                - '|'
+                - bulletedList
+                - numberedList
+                - '|'
+                - blockQuote
+                - horizontalLine
+                - '|'
+                - indent
+                - outdent
+                - alignment:left
+                - alignment:center
+                - alignment:right
+                - '|'
+                - specialCharacters
+                - '|'
+                - sourceEditing
 
-        justifyClasses:
-            - has-text-left
-            - has-text-centered
-            - has-text-right
-
-        extraPlugins:
-            - justify
-            - autolink
-
-        removePlugins:
-            - image
-
-        removeButtons:
-            - Anchor
-            - JustifyBlock
-
-classesAnchor:
-    mail:
-        class: 'icon-mail'
-        type: 'mail'
-
-buttons:
-    link:
-        properties:
-            class:
-                allowedClasses: 'icon-mail'
+        alignment:
+            options:
+                - { name: 'left', className: 'has-text-left' }
+                - { name: 'center', className: 'has-text-centered' }
+                - { name: 'right', className: 'has-text-right' }
