--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.22.20",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.22.20",
     "@symfony/webpack-encore": "^4.4.0",
     "copy-webpack-plugin": "^11.0.0",
     "file-loader": "^6.2.0",
     "sass": "^1.67.0",
     "sass-loader": "^13.3.2",
-    "webpack-cli": "^5.1.4",
-    "@babel/core": "^7.22.20",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.22.20",
-    "webpack": "^5.88.2"
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@creativebulma/bulma-collapsible": "1.0.3",
