--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
   },
   "suggest": {
     "georgringer/news": "Versatile news extension, based on extbase & fluid for TYPO3 CMS",
-    "image_autoresize": "Let TYPO3 automatically resize down huge images/pictures on-the-fly during upload (or using a scheduler task for batch processing)"
+    "image_autoresize": "Let TYPO3 automatically resize down huge images/pictures on-the-fly during upload (or using a scheduler task for batch processing)",
+    "b13/container": "Create Custom Container Content Elements for TYPO3",
+    "gridelementsteam/gridelements": "Extends the grid-based concept known from the backend layout of pages to regular content elements"
   },
   "autoload": {
     "psr-4": {
