--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "flickity-fade": "1.0.0",
     "ionicons": "4.5.10-0",
     "photoswipe": "4.1.3",
-    "shareon": "^2.5.0"
+    "resize-observer-polyfill": "^1.5.1",
+    "shareon": "^2.5.0",
+    "simplebar": "^6.2.7"
   },
   "scripts": {
     "dev-server": "encore dev-server",
