[TASK] Implement Slim Select for MultiSelect usage

--- a/Configuration/Form/FormElements/MultiSelect.yaml
+++ b/Configuration/Form/FormElements/MultiSelect.yaml
@@ -3,6 +3,6 @@ prototypes:
     formElementsDefinition:
       MultiSelect:
         properties:
-          containerClassAttribute: control
-          elementClassAttribute: select
+          containerClassAttribute: control is-expanded
+          elementClassAttribute: select is-multiple is-fullwidth
           elementErrorClassAttribute: is-danger
