--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "photoswipe": "4.1.3",
     "resize-observer-polyfill": "^1.5.1",
     "shareon": "^2.5.0",
-    "simplebar": "^6.2.7"
+    "simplebar": "^6.2.7",
+    "slim-select": "^2.9.2"
   },
   "scripts": {
     "dev-server": "encore dev-server",
