[TASK] Add viewhelper to retrieve logo_main from WebsiteSettings in backend context (Experimental)

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -16,3 +16,6 @@ services:
     tags:
       - name: event.listener
         identifier: 'bulma-package-imageAutoResize-processDefaultConfiguration'
+
+  AgrosupDijon\BulmaPackage\ViewHelpers\WebsiteSettings\MainLogoViewHelper:
+    public: true
