[TASK] 13.4: Rector/Fractor/PHPStan/PHP CS Fixer

--- a/composer.json
+++ b/composer.json
@@ -21,20 +21,20 @@
   ],
   "license": "GPL-2.0-or-later",
   "require": {
-    "typo3/cms-backend": "^12.4",
-    "typo3/cms-core": "^12.4",
-    "typo3/cms-extbase": "^12.4",
-    "typo3/cms-extensionmanager": "^12.4",
-    "typo3/cms-fluid": "^12.4",
-    "typo3/cms-frontend": "^12.4",
-    "typo3/cms-install": "^12.4",
-    "typo3/cms-rte-ckeditor": "^12.4",
-    "typo3/cms-seo": "^12.4",
-    "scssphp/scssphp": "^1.0.8",
+    "typo3/cms-backend": "^13.4",
+    "typo3/cms-core": "^13.4",
+    "typo3/cms-extbase": "^13.4",
+    "typo3/cms-extensionmanager": "^13.4",
+    "typo3/cms-fluid": "^13.4",
+    "typo3/cms-frontend": "^13.4",
+    "typo3/cms-install": "^13.4",
+    "typo3/cms-rte-ckeditor": "^13.4",
+    "typo3/cms-seo": "^13.4",
+    "scssphp/scssphp": "^1.13",
     "ext-dom": "*",
     "ext-simplexml": "*",
-    "symfony/dom-crawler": "^6.3 || ^7.0",
-    "symfony/css-selector": "^6.3 || ^7.0"
+    "symfony/dom-crawler": "^7.1",
+    "symfony/css-selector": "^7.1"
   },
   "suggest": {
     "georgringer/news": "Versatile news extension, based on extbase & fluid for TYPO3 CMS",
