--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
     "@babel/core": "^7.22.20",
-    "@babel/plugin-transform-class-properties": "^7.27.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.22.20",
     "@symfony/webpack-encore": "^4.4.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -9,8 +9,7 @@
     "sass": "^1.67.0",
     "sass-loader": "^13.3.2",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.2.2"
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@creativebulma/bulma-collapsible": "1.0.3",
